--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,7 +74,7 @@ r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=True
-r.MobileHDR=True
+r.MobileHDR=False
 vr.MobileMultiView=True
 r.Mobile.UseHWsRGBEncoding=True
 vr.RoundRobinOcclusion=False
@@ -174,13 +174,13 @@ StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=1.0
-MinSDKVersion=19
-TargetSDKVersion=30
+MinSDKVersion=29
+TargetSDKVersion=29
 InstallLocation=InternalOnly
 bEnableGradle=True
 bEnableLint=False
 bPackageDataInsideApk=True
-bCreateAllPlatformsInstall=True
+bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
 bForceSmallOBBFiles=False
 bAllowLargeOBBFiles=False
@@ -214,7 +214,7 @@ KeyAlias=DistroKey
 KeyStorePassword=codesigner
 KeyPassword=
 bBuildForArmV7=True
-bBuildForArm64=True
+bBuildForArm64=False
 bBuildForX8664=False
 bBuildForES31=True
 bSupportsVulkan=True
@@ -346,6 +346,6 @@ FFRLevel=FFR_Medium
 
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/VRTest")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/VRTest")
++ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/VRFinalProject")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/VRFinalProject")
 
