--- a/VRFinalProject.uproject
+++ b/VRFinalProject.uproject
@@ -3,13 +3,6 @@
 	"EngineAssociation": "4.27",
 	"Category": "",
 	"Description": "",
-	"Modules": [
-		{
-			"Name": "VRTest",
-			"Type": "Runtime",
-			"LoadingPhase": "Default"
-		}
-	],
 	"Plugins": [
 		{
 			"Name": "XRVisualization",
@@ -40,8 +33,13 @@
 			]
 		},
 		{
-			"Name": "XGEController",
-			"Enabled": false
+			"Name": "OculusVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Android"
+			]
 		}
 	],
 	"TargetPlatforms": [
