--- a/VRFinalProject.uproject
+++ b/VRFinalProject.uproject
@@ -31,6 +31,14 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "VRExpansionPlugin",
+			"Enabled": true
+		},
+		{
+			"Name": "OpenVRExpansionPlugin",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
